2012-04-27 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Require div2007 0.10.1
	* Fix bug #36675: Query parameter cmd is not honoured
	* Fix bug #36526: authCode is not compatible with standard authentication code
	* Fix bug #36504: SR's authentication code does not match the one from DirectMail
	* Fix bug #36680: authCode is not horoured if short urls are enabled

2012-04-26 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #36590: Infomail form does not display email validation error
	* Fix bug #36638: Composite name may be substituted with a single space

2012-04-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Cleanup in ext_localconf.php
	* Fix class name in ext_autoload.php
	* Revert class name change in ext_autoload.php
	* Cleanup in class.tx_srfeuserregister_email.php
	* Remove require_once class.tx_div2007_email.php in class.tx_srfeuserregister_email.php

2012-04-23 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow-up to bug #35882: Corrections to template subpart "terms acknowledged" on edit form
	* Follow-up 14 to feature #34447: Add hidden username if needed
	* Cleanup captcha-related code
	* Add feature #36492: Use t3lib_div::isValidUrl to validate url's
	* Update manual
	
2012-04-22 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #36433: Non-closed br tags in pi1/locallang.xml
	* Fix bug #36434: locallang.xml contains \n characters combination
	* Fix bug #15661 (old bug tracker): broken linefeed handling in plain text emails
	* Fix bug #36434: Broken linefeed handling in plain text emails
	* Fix bug #36442: t3lib_div::cHashParams is deprecated in TYPO3 4.7

2012-04-21 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Require div2007 0.10.0
	* Follow-up 12 to feature #34447: Avoid retrieving private key when no password is set
	* Follow-up to feature #36191: Remove left over debugging code
	* Follow-up 13 to feature #34447: Remove secured password from data array